manifests/cluster/llama-cpp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: llama-cpp
  namespace: llama-cpp
spec:
  selector:
    app: llama-cpp
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
